tests/compile_errors/type/014_array_callback_wrong_type.xr
// Expected: compile error — callback-typed parameters on Array<T> and
// Map<K, V> methods must be functions, not ints. Regression: previously
// the analyzer silently skipped argument-type checks for native container
// methods because the inner `fn(...)` literal in their signatures parsed
// to unknown, which caused arr.reduce(0, fn) to compile (and segfault at
// runtime when args[0] was a non-zero int) instead of being rejected.

let xs = [1, 2, 3]

let bad1 = xs.map(0)
let bad2 = xs.filter(0)
let bad3 = xs.reduce(0, fn(acc: int, v: int): int { return acc + v })
let bad4 = xs.find(0)
let bad5 = xs.every(0)
let bad6 = xs.some(0)
xs.forEach(0)

let m: Map<string, int> = new Map()
m.forEach(0)
